--- a/coding Challanges/challange02/index.html
+++ b/coding Challanges/challange02/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>String and Literals </title>
+    <title>Challange Number 02</title>
     <style>
       body {
         height: 100vh;
@@ -24,7 +24,7 @@
     </style>
   </head>
   <body>
-    <h1>Decission Making ( if/ else) </h1>
+    <h1>Challange Number 02</h1>
     <script src="app.js"></script>
   </body>
 </html>
