--- a/coding Challanges/challange03/index.html
+++ b/coding Challanges/challange03/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>String and Literals </title>
+    <title>JavaScript Fundamentals – Part 1</title>
+    <script src="app.js"></script>
     <style>
       body {
         height: 100vh;
@@ -24,7 +25,6 @@
     </style>
   </head>
   <body>
-    <h1>Decission Making ( if/ else) </h1>
-    <script src="app.js"></script>
+    <h1>Code Challanges Number 03</h1>
   </body>
 </html>
