--- a/string literals/index.html
+++ b/string literals/index.html
@@ -24,7 +24,7 @@
     </style>
   </head>
   <body>
-    <h1>Decission Making ( if/ else) </h1>
+    <h1>String and Literals </h1>
     <script src="app.js"></script>
   </body>
 </html>
