add new file day 2

--- a/coding Challanges/challange05/index.html
+++ b/coding Challanges/challange05/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>JavaScript Fundamentals – Part 2</title>
-    <script src="array.js"></script>
+    <title>JavaScript Fundamentals – Part 1</title>
+    <script src="app.js"></script>
     <style>
       body {
         height: 100vh;
@@ -25,6 +25,6 @@
     </style>
   </head>
   <body>
-    <h1>Arrays and others </h1>
+    <h1>Code Challanges Number 05</h1>
   </body>
 </html>
