--- a/functions/index.html
+++ b/functions/index.html
@@ -25,6 +25,6 @@
   </head>
   <body>
     <h1>Functions – Part </h1>
-    <script src="app.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
